# badbot-discord-logger

./: CHANGELOG.md  Dockerfile  README.md  backfill_webhooks.py  cli.py  database_schema.sql  docker-compose.yml  drop_all_tables.sql  env.example  env.railway  healthcheck.py  main.py  migrate_add_updated_at.sql  migrate_add_webhook_id.sql  migrate_webhook_support.sql  pyproject.toml  railway.json  requirements.txt  supervisord.conf
src/badbot_discord_logger/: __init__.py  bot.py  config.py  database.py  models.py
tests/: test_config.py
